[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
semaphore = { git = "https://github.com/worldcoin/semaphore-rs" }
ruint = "1.11.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
ethers = "2.0"
anyhow = "1.0"
